# fairy-viewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: fairy.frag  fairy.vert
src/: fairy_buffer.cpp  fairy_buffer.hpp  fairy_context.cpp  fairy_context.hpp  fairy_pipeline.cpp  fairy_pipeline.hpp  fairy_shader_test.hpp  fairy_texture.cpp  fairy_texture.hpp  fairy_viewer.cpp  fairy_viewer.h  fv_define.h  gpu_context.cpp  gpu_context.h  main.cpp  vk_context.cpp  vk_context.h
src/render_core/: gpu_buffer.cpp  gpu_buffer.hpp  gpu_context.cpp  gpu_context.hpp  gpu_texture.cpp  gpu_texture.hpp
src/render_fairy/: fairy_pipeline.cpp  fairy_pipeline.hpp  fairy_surface.cpp  fairy_surface.hpp
tools/: gen_bin_cpp.cmake  gen_head_impl_cpp.cmake  gen_shader_cpp.cmake
